# gtsam-extended

./: .gitignore  AGENTS.md  PUBLISHING.md  README.md  bundle_dylibs.py  download_wheels.py  flake.nix  pyproject.toml  rename_wheel.py
.github/workflows/: auto-update.yml  build-cp310-linux-arm.yml  publish.yml
gtsam_extended/: __init__.py
gtsam_macos/: __init__.py
run/: build  download_wheels  publish  rename_wheels  upstream_version.py
