[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gtsam-extended"
version = "4.3a1.post1"
description = "GTSAM (Georgia Tech Smoothing And Mapping) - pre-built wheels for all platforms"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-2-Clause"
dependencies = [
    "numpy",
]
authors = [
    {name = "Community Contributor"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]
keywords = ["gtsam", "slam", "robotics", "pose-graph", "isam2", "factor-graph"]

[project.urls]
Homepage = "https://gtsam.org/"
Repository = "https://github.com/jeff-hykin/gtsam_macos"

[tool.setuptools]
packages = ["gtsam_extended"]
